# fourier-drawing

./: .gitignore  LICENSE  README.md  fourier_text.py  pyproject.toml  requirements.txt
fourier_drawing/: __init__.py  config.py  fourier.py  scenes.py  sources.py
tests/: test_fourier.py
